--- a/openstack_auth/locale/es_MX/LC_MESSAGES/django.po
+++ b/openstack_auth/locale/es_MX/LC_MESSAGES/django.po
@@ -3,58 +3,58 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Matthias Runge <mrunge@redhat.com>, 2013
-# saschpe, 2013
+# Marco Bravo <marcobravov@gmail.com>, 2013
+# Makika <miriamgc@hotmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-11 13:43+0800\n"
-"PO-Revision-Date: 2013-09-17 08:42+0000\n"
-"Last-Translator: saschpe\n"
-"Language-Team: German (http://www.transifex.com/projects/p/openstack/language/de/)\n"
+"PO-Revision-Date: 2013-09-24 18:04+0000\n"
+"Last-Translator: Marco Bravo <marcobravov@gmail.com>\n"
+"Language-Team: Spanish (Mexico) (http://www.transifex.com/projects/p/openstack/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
+"Language: es_MX\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: backend.py:44
 msgid "The authentication token issued by the Identity service has expired."
-msgstr "Das Authentifizierungs-Token ist abgelaufen."
+msgstr "El token de autenticación otorgado por el servicio de identidad ha expirado."
 
 #: backend.py:92
 msgid "Invalid user name or password."
-msgstr "Ungültiger Benutzername oder ungültiges Passwort."
+msgstr "Nombre de usuario o contraseña inválidos."
 
 #: backend.py:97
 msgid "An error occurred authenticating. Please try again later."
-msgstr "Während der Authentifizierung ist ein Fehler aufgetretenBitte versuchen Sie es später noch einmal"
+msgstr "Se ha producido un error de autenticación. Por favor inténtelo de nuevo más tarde."
 
 #: backend.py:119
 msgid "Unable to retrieve authorized projects."
-msgstr "Außerstande autorisierte Projekte abzurufen."
+msgstr "No se pueden recuperar los proyectos autorizados."
 
 #: backend.py:124
 msgid "You are not authorized for any projects."
-msgstr "Sie sind für kein Projekt berechtigt."
+msgstr "No estás autorizado para algunos proyectos."
 
 #: backend.py:143
 msgid "Unable to authenticate to any available projects."
-msgstr "Außerstande bei irgendeinem verfügbaren Projekt zu authentisieren."
+msgstr "No se puede autenticar a los proyectos disponibles."
 
 #: forms.py:48
 msgid "Region"
-msgstr "Region"
+msgstr "Región."
 
 #: forms.py:49
 msgid "User Name"
-msgstr "Benutzername"
+msgstr "Nombre de Usuario"
 
 #: forms.py:50
 msgid "Password"
-msgstr "Passwort"
+msgstr "Contraseña"
 
 #: forms.py:59
 msgid "Domain"
-msgstr "Domäne"
+msgstr "Dominio"
