--- a/openstack_auth/locale/nl_NL/LC_MESSAGES/django.po
+++ b/openstack_auth/locale/nl_NL/LC_MESSAGES/django.po
@@ -3,58 +3,57 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Matthias Runge <mrunge@redhat.com>, 2013
-# saschpe, 2013
+# toMeloos <tom@server.biz>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-11 13:43+0800\n"
-"PO-Revision-Date: 2013-09-17 08:42+0000\n"
-"Last-Translator: saschpe\n"
-"Language-Team: German (http://www.transifex.com/projects/p/openstack/language/de/)\n"
+"PO-Revision-Date: 2013-09-19 10:01+0000\n"
+"Last-Translator: toMeloos <tom@server.biz>\n"
+"Language-Team: Dutch (Netherlands) (http://www.transifex.com/projects/p/openstack/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
+"Language: nl_NL\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: backend.py:44
 msgid "The authentication token issued by the Identity service has expired."
-msgstr "Das Authentifizierungs-Token ist abgelaufen."
+msgstr "De door de identiteitsdienst verstrekte authenticatietoken is verlopen."
 
 #: backend.py:92
 msgid "Invalid user name or password."
-msgstr "Ungültiger Benutzername oder ungültiges Passwort."
+msgstr "Ongeldige gebruikersnaam of wachtwoord."
 
 #: backend.py:97
 msgid "An error occurred authenticating. Please try again later."
-msgstr "Während der Authentifizierung ist ein Fehler aufgetretenBitte versuchen Sie es später noch einmal"
+msgstr "Er is een fout opgetreden bij de verificatie. Probeert u het later nog eens."
 
 #: backend.py:119
 msgid "Unable to retrieve authorized projects."
-msgstr "Außerstande autorisierte Projekte abzurufen."
+msgstr "Niet in staat om de geauthentificeerde projecten op te halen."
 
 #: backend.py:124
 msgid "You are not authorized for any projects."
-msgstr "Sie sind für kein Projekt berechtigt."
+msgstr "U bent voor geen enkel project gemachtigd."
 
 #: backend.py:143
 msgid "Unable to authenticate to any available projects."
-msgstr "Außerstande bei irgendeinem verfügbaren Projekt zu authentisieren."
+msgstr "Niet in staat u te authenticeren bij enig beschikbaar project."
 
 #: forms.py:48
 msgid "Region"
-msgstr "Region"
+msgstr "Regio"
 
 #: forms.py:49
 msgid "User Name"
-msgstr "Benutzername"
+msgstr "Gebruikersnaam"
 
 #: forms.py:50
 msgid "Password"
-msgstr "Passwort"
+msgstr "Wachtwoord"
 
 #: forms.py:59
 msgid "Domain"
-msgstr "Domäne"
+msgstr "Domein"
