--- a/openstack_auth/locale/pl_PL/LC_MESSAGES/django.po
+++ b/openstack_auth/locale/pl_PL/LC_MESSAGES/django.po
@@ -3,45 +3,44 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Matthias Runge <mrunge@redhat.com>, 2013
-# saschpe, 2013
+# Łukasz Jernaś <deejay1@srem.org>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-11 13:43+0800\n"
-"PO-Revision-Date: 2013-09-17 08:42+0000\n"
-"Last-Translator: saschpe\n"
-"Language-Team: German (http://www.transifex.com/projects/p/openstack/language/de/)\n"
+"PO-Revision-Date: 2013-09-14 21:02+0000\n"
+"Last-Translator: Łukasz Jernaś <deejay1@srem.org>\n"
+"Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openstack/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pl_PL\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: backend.py:44
 msgid "The authentication token issued by the Identity service has expired."
-msgstr "Das Authentifizierungs-Token ist abgelaufen."
+msgstr "Tonek uwierzytelniania wydany przez usługę uwierzytelniania wygasł."
 
 #: backend.py:92
 msgid "Invalid user name or password."
-msgstr "Ungültiger Benutzername oder ungültiges Passwort."
+msgstr "Nieprawidłowa nazwa użytkownika lub hasło."
 
 #: backend.py:97
 msgid "An error occurred authenticating. Please try again later."
-msgstr "Während der Authentifizierung ist ein Fehler aufgetretenBitte versuchen Sie es später noch einmal"
+msgstr "Wystąpił błąd w trakcie uwierzytelniania. Proszę spróbować później."
 
 #: backend.py:119
 msgid "Unable to retrieve authorized projects."
-msgstr "Außerstande autorisierte Projekte abzurufen."
+msgstr "Nie można pobrać uwierzytelnionych projektów."
 
 #: backend.py:124
 msgid "You are not authorized for any projects."
-msgstr "Sie sind für kein Projekt berechtigt."
+msgstr "Nie upoważniono do żadnego projektu."
 
 #: backend.py:143
 msgid "Unable to authenticate to any available projects."
-msgstr "Außerstande bei irgendeinem verfügbaren Projekt zu authentisieren."
+msgstr "Nie można uwierzytelnić do żadnego z istniejących projektów."
 
 #: forms.py:48
 msgid "Region"
@@ -49,12 +48,12 @@ msgstr "Region"
 
 #: forms.py:49
 msgid "User Name"
-msgstr "Benutzername"
+msgstr "Nazwa użytkownika"
 
 #: forms.py:50
 msgid "Password"
-msgstr "Passwort"
+msgstr "Hasło"
 
 #: forms.py:59
 msgid "Domain"
-msgstr "Domäne"
+msgstr "Domena"
